--- a/NihalYalcin/Html/ucuncu.html
+++ b/NihalYalcin/Html/ucuncu.html
@@ -3,22 +3,17 @@
 <head>
 <title>Bu benim ilk e-alanım</title>
 <meta charset="utf-8">
-
-<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body>
-	
-	<h1>Birinci Başlık</h1>
-	<br>
-	<p>Örnek Paragraf</p>
+<body style="background-color: black; color: white;">
+	<h1 style="color: red;">Birinci Başlık</h1>
 	<br>
 	<p>Bu tavsiye edilen css metodu değil.</p>
-	<br>
 	<ol>
 		<li>Satıriçi CSS</li>
-		<li>HTMNL-Sayfa CSS</li>
-		<li>HArici CSS</li>
+		<li>HTML-Sayfa CSS</li>
+		<li>Harici CSS</li>
+
 	</ol>
 </body>
 </html>
