--- a/NihalYalcin/Html/ucuncu_2.html
+++ b/NihalYalcin/Html/ucuncu_2.html
@@ -3,22 +3,32 @@
 <head>
 <title>Bu benim ilk e-alanım</title>
 <meta charset="utf-8">
+<style>
+	body{
+		background-color: black;
+		color: white
+	}
+	h1{
+		color: blue;
+	}
+	p{
+		color: blue;
+	}
 
-<link rel="stylesheet" type="text/css" href="style.css">
+	</style>
 </head>
 
 <body>
-	
 	<h1>Birinci Başlık</h1>
 	<br>
 	<p>Örnek Paragraf</p>
 	<br>
-	<p>Bu tavsiye edilen css metodu değil.</p>
+	<p>Bu tavsiye edilen CSS metodu değil.</p>
 	<br>
 	<ol>
 		<li>Satıriçi CSS</li>
-		<li>HTMNL-Sayfa CSS</li>
-		<li>HArici CSS</li>
+		<li>HTML-Sayfa CSS</li>
+		<li>Harici CSS</li>
 	</ol>
 </body>
 </html>
